--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -63,8 +63,9 @@ jobs:
               ;;
           esac
           if [ -n "${QEMU_ARCH}" ]; then
-            docker rm $(docker create --volume qemu-user-static:/usr/bin multiarch/qemu-user-static:${QEMU_ARCH} dummy)
-            docker run --rm --privileged --volume qemu-user-static:/usr/bin:ro multiarch/qemu-user-static:register --persistent yes
+            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+            #docker rm $(docker create --volume qemu-user-static:/usr/bin multiarch/qemu-user-static:${QEMU_ARCH} dummy)
+            #docker run --rm --privileged --volume qemu-user-static:/usr/bin:ro multiarch/qemu-user-static:register --persistent yes
           fi
 
       - name: Build wheels in image
