--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -64,15 +64,14 @@ jobs:
           esac
           if [ -n "${QEMU_ARCH}" ]; then
             docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-            #docker rm $(docker create --volume qemu-user-static:/usr/bin multiarch/qemu-user-static:${QEMU_ARCH} dummy)
-            #docker run --rm --privileged --volume qemu-user-static:/usr/bin:ro multiarch/qemu-user-static:register --persistent yes
           fi
 
       - name: Build wheels in image
         run: |
           DISTRO=$(echo ${{ matrix.os }} | awk -F'-' '{print $1}')
           DISTROVER=$(echo ${{ matrix.os }} | awk -F'-' '{print $2}')
-          DOCKER_BUILDKIT=1 DOCKER_CLI_EXPERIMENTAL=enabled docker build -t ${{ matrix.os }}-${{ matrix.arch }} --build-arg DISTRO=${DISTRO} --build-arg DISTROVER=${DISTROVER} --build-arg ARCH=${{ matrix.arch }} --build-arg PACKAGES="${{ github.event.inputs.PACKAGES }}" .
+          DOCKER_BUILDKIT=1 docker buildx create --use --name insecure-builder --buildkitd-flags '--allow-insecure-entitlement security.insecure'
+          DOCKER_BUILDKIT=1 docker buildx build --allow security.insecure -t ${{ matrix.os }}-${{ matrix.arch }} --build-arg DISTRO=${DISTRO} --build-arg DISTROVER=${DISTROVER} --build-arg ARCH=${{ matrix.arch }} --build-arg PACKAGES="${{ github.event.inputs.PACKAGES }}" .
           docker create --name ${{ matrix.os }}-${{ matrix.arch }} ${{ matrix.os }}-${{ matrix.arch }}
           mkdir -p build
           docker cp ${{ matrix.os }}-${{ matrix.arch }}:/build build
