--- a/.github/workflows/wheelie.yml
+++ b/.github/workflows/wheelie.yml
@@ -72,6 +72,7 @@ jobs:
           DISTROVER=$(echo ${{ matrix.os }} | awk -F'-' '{print $2}')
           DOCKER_BUILDKIT=1 docker buildx create --use --name insecure-builder --buildkitd-flags '--allow-insecure-entitlement security.insecure'
           DOCKER_BUILDKIT=1 docker buildx build --allow security.insecure -t ${{ matrix.os }}-${{ matrix.arch }} --build-arg DISTRO=${DISTRO} --build-arg DISTROVER=${DISTROVER} --build-arg ARCH=${{ matrix.arch }} --build-arg PACKAGES="${{ github.event.inputs.PACKAGES }}" .
+          docker images
           docker create --name ${{ matrix.os }}-${{ matrix.arch }} ${{ matrix.os }}-${{ matrix.arch }}
           mkdir -p build
           docker cp ${{ matrix.os }}-${{ matrix.arch }}:/build build
